--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>Document</title>
 </head>
 <body>
+    <ul id="member-list"></ul>
+    <hr>
+    <div class="container">
+        
+    </div>
     <script src="main.js"></script>
 </body>
 </html>
